--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>br.com.cadastra</groupId>
     <artifactId>Cadastra</artifactId>
     <packaging>jar</packaging>
+    <version>0.1.0</version>
 
     <name>Cadastra</name>
     <description>Sistema de login (API)</description>
@@ -33,7 +34,6 @@
         <dependency>
     		<groupId>org.springframework</groupId>
     		<artifactId>spring-beans</artifactId>
-    		<version>5.0.7.RELEASE</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
