--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>br.com.cadastra</groupId>
     <artifactId>Cadastra</artifactId>
     <packaging>jar</packaging>
-    <version>0.1.0</version>
+    <version>0.0.1-SNAPSHOT</version>
 
     <name>Cadastra</name>
     <description>Sistema de login (API)</description>
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.3.RELEASE</version>
+        <version>1.4.0.RELEASE</version>
     </parent>
 
 
